[gd_scene load_steps=12 format=3 uid="uid://fs1jw3ero80e"]

[ext_resource type="Script" path="res://scenes/control.gd" id="1_k4b2h"]
[ext_resource type="Script" path="res://scenes/coins.gd" id="1_me5uv"]
[ext_resource type="Script" path="res://scenes/button.gd" id="2_db0dg"]
[ext_resource type="Script" path="res://scenes/buy_1.gd" id="3_ehdpn"]
[ext_resource type="Script" path="res://scenes/error_label.gd" id="4_a4hw3"]
[ext_resource type="Texture2D" uid="uid://pqsq5wgyjtr2" path="res://assets/steak.png" id="6_8c8r3"]
[ext_resource type="Texture2D" uid="uid://bhm5huus045ox" path="res://assets/sweet.png" id="7_ljwkn"]
[ext_resource type="Texture2D" uid="uid://dq85vul6ft4t" path="res://assets/cow.png" id="8_fmca6"]
[ext_resource type="Texture2D" uid="uid://dukeg14td56q7" path="res://assets/broccoli.png" id="9_2lgta"]
[ext_resource type="Texture2D" uid="uid://dtkkia6ys3bms" path="res://assets/carrot.png" id="10_wt7cc"]
[ext_resource type="Texture2D" uid="uid://ccesf88fohd28" path="res://assets/fent.png" id="11_jl42y"]

[node name="ShopUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 1.0
offset_right = -2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_k4b2h")

[node name="Coins" type="Label" parent="Control"]
layout_mode = 0
offset_left = 51.0
offset_top = 25.0
offset_right = 325.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 30
vertical_alignment = 1
script = ExtResource("1_me5uv")

[node name="ErrorLabel" type="Label" parent="Control/Coins"]
visible = false
z_index = 5
layout_mode = 0
offset_left = 340.0
offset_top = 221.0
offset_right = 737.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 50
text = "You're Too Poor!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_a4hw3")

[node name="CoinsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1107.0
offset_top = 603.0
offset_right = 1148.0
offset_bottom = 641.0
text = "+$5"
script = ExtResource("2_db0dg")

[node name="Buy1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 232.0
offset_top = 276.0
offset_right = 382.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 10
text = "Buy: $15
+20 Hunger"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy1"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy1"]
position = Vector2(70, -78)
scale = Vector2(0.22815, 0.192215)
texture = ExtResource("6_8c8r3")

[node name="Title" type="Label" parent="Control"]
layout_mode = 0
offset_left = 460.0
offset_top = 9.0
offset_right = 719.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 36
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buy2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 520.0
offset_top = 276.0
offset_right = 670.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 10
text = "Buy: $10
+10 Hunger  +5 Fun"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy2"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy2"]
position = Vector2(72, -76)
scale = Vector2(0.204138, 0.204138)
texture = ExtResource("7_ljwkn")

[node name="Buy4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 233.0
offset_top = 523.0
offset_right = 383.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 10
text = "Buy: $550
+90 Hunger"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy4"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy4"]
position = Vector2(76, -97)
scale = Vector2(0.316741, 0.316741)
texture = ExtResource("8_fmca6")

[node name="Buy3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 808.0
offset_top = 276.0
offset_right = 958.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 10
text = "Buy: $23
+30 Hunger +5 Health -5 Fun"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy3"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy3"]
position = Vector2(73, -72)
scale = Vector2(0.191741, 0.191741)
texture = ExtResource("9_2lgta")

[node name="Buy5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 521.0
offset_top = 523.0
offset_right = 671.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 10
text = "Buy: $19
+10 Hunger + 10 Health"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy5"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy5"]
position = Vector2(71, -82)
scale = Vector2(0.234155, 0.234155)
texture = ExtResource("10_wt7cc")

[node name="Buy6" type="Button" parent="Control"]
layout_mode = 0
offset_left = 809.0
offset_top = 523.0
offset_right = 959.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 10
text = "Buy: $423
+69 Fun -15 Health"
script = ExtResource("3_ehdpn")

[node name="ColorRect" type="ColorRect" parent="Control/Buy6"]
layout_mode = 0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -11.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy6"]
position = Vector2(80, -75)
scale = Vector2(0.28866, 0.28866)
texture = ExtResource("11_jl42y")

[node name="GoBack" type="Button" parent="Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 528.0
offset_right = 119.0
offset_bottom = 628.0
text = "Go Back"

[connection signal="pressed" from="Control/CoinsButton" to="Control/Coins" method="_on_coins_button_pressed"]
[connection signal="pressed" from="Control/Buy1" to="Control/Coins" method="_on_buy_1_pressed"]
[connection signal="pressed" from="Control/Buy2" to="Control/Coins" method="_on_buy_2_pressed"]
[connection signal="pressed" from="Control/Buy4" to="Control/Coins" method="_on_buy_4_pressed"]
[connection signal="pressed" from="Control/Buy3" to="Control/Coins" method="_on_buy_3_pressed"]
[connection signal="pressed" from="Control/Buy5" to="Control/Coins" method="_on_buy_5_pressed"]
[connection signal="pressed" from="Control/Buy6" to="Control/Coins" method="_on_buy_6_pressed"]
[connection signal="pressed" from="Control/GoBack" to="Control" method="_on_go_back_pressed"]
